# internal/handlers/taskHandlers.go
@@ -16,6 +16,27 @@ func NewTaskHandler(service *taskService.TaskService) *TaskHandler {
 	}
 }
 
+func (h *TaskHandler) GetTasksbyidUserId(_ context.Context, request tasks.GetTasksbyidUserIdRequestObject) (tasks.GetTasksbyidUserIdResponseObject, error) {
+	userId := uint(request.UserId)
+	allTasks, err := h.Service.GetAllTasksById(userId)
+	if err != nil {
+		return tasks.GetTasksbyidUserId404Response{}, nil
+	}
+
+	response := tasks.GetTasksbyidUserId200JSONResponse{}
+
+	for _, tsk := range allTasks.([]taskService.Task) {
+		task := tasks.Task{
+			Id:     &tsk.ID,
+			Task:   &tsk.Task,
+			IsDone: &tsk.IsDone,
+			UserId: &tsk.UserID,
+		}
+		response = append(response, task)
+	}
+	return response, nil
+}
+
 func (h *TaskHandler) GetTasks(_ context.Context, _ tasks.GetTasksRequestObject) (tasks.GetTasksResponseObject, error) {
 	allTasks, err := h.Service.GetAllTasks()
 	if err != nil {
@@ -29,10 +50,10 @@ func (h *TaskHandler) GetTasks(_ context.Context, _ tasks.GetTasksRequestObject)
 			Id:     &tsk.ID,
 			Task:   &tsk.Task,
 			IsDone: &tsk.IsDone,
+			UserId: &tsk.UserID,
 		}
 		response = append(response, task)
 	}
-
 	return response, nil
 }
 
@@ -42,6 +63,7 @@ func (h *TaskHandler) PostTasks(_ context.Context, request tasks.PostTasksReques
 	taskToCreate := taskService.Task{
 		Task:   *taskRequest.Task,
 		IsDone: *taskRequest.IsDone,
+		UserID: uint(*taskRequest.UserId),
 	}
 
 	createdTask, err := h.Service.CreateTask(taskToCreate)
@@ -54,8 +76,8 @@ func (h *TaskHandler) PostTasks(_ context.Context, request tasks.PostTasksReques
 		Id:     &createdTask.ID,
 		Task:   &createdTask.Task,
 		IsDone: &createdTask.IsDone,
+		UserId: &createdTask.UserID,
 	}
-
 	return response, nil
 }
 
@@ -79,13 +101,14 @@ func (h *TaskHandler) PatchTasksId(_ context.Context, request tasks.PatchTasksId
 	if existingTask == nil {
 		return tasks.PatchTasksId404Response{}, nil
 	}
-
 	if taskUpdates.Task != nil {
 		existingTask.Task = *taskUpdates.Task
 	}
-
 	if taskUpdates.IsDone != nil {
 		existingTask.IsDone = *taskUpdates.IsDone
+	}
+	if taskUpdates.UserId != nil {
+		existingTask.UserID = uint(*taskUpdates.UserId)
 	}
 
 	updatedTask, err := h.Service.UpdateTaskByID(id, *existingTask)
@@ -97,6 +120,7 @@ func (h *TaskHandler) PatchTasksId(_ context.Context, request tasks.PatchTasksId
 		Id:     &updatedTask.ID,
 		Task:   &updatedTask.Task,
 		IsDone: &updatedTask.IsDone,
+		UserId: &updatedTask.UserID,
 	}
 	return response, nil
 }
@@ -108,6 +132,5 @@ func (h *TaskHandler) DeleteTasksId(_ context.Context, request tasks.DeleteTasks
 	if err != nil {
 		return tasks.DeleteTasksId404Response{}, nil
 	}
-
 	return tasks.DeleteTasksId204Response{}, nil
 }
